@@ -73,6 +73,8 @@ easier to use. The changes are:
 - Video Decoder Acceleration (VDA) HWAccel module.
 - replacement Indeo 3 decoder
 - new ffmpeg option: -map_channel
+- volume audio filter added
+
 
 version 0.8:
 
